Add The REPL - a Clojure newsletter to community resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -1,6 +1,6 @@
 = Community Resources
 Rich Hickey
-2016-02-15
+2016-06-25
 :type: community
 :toc: macro
 :icons: font
@@ -44,7 +44,7 @@ Community:
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
 * http://planet.clojure.in/[Planet Clojure] - Clojure blog aggregator
-* Newsletters - http://defnewsletter.com/[(def newsletter)] http://www.clojuregazette.com/[Clojure Gazette] http://reborg.tumblr.com/[Clojure Weekly]
+* Newsletters - http://defnewsletter.com/[(def newsletter)] http://www.clojuregazette.com/[Clojure Gazette] http://reborg.tumblr.com/[Clojure Weekly] http://therepl.net[The REPL]
 * http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
 * http://www.clojureatlas.com/[Clojure Atlas] - visualization of Clojure and the core library
 
