--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -44,9 +44,14 @@ Community:
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
 * http://planet.clojure.in/[Planet Clojure] - Clojure blog aggregator
-* Newsletters - http://defnewsletter.com/[(def newsletter)] http://www.clojuregazette.com/[Clojure Gazette] http://reborg.tumblr.com/[Clojure Weekly]
 * http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
 * http://www.clojureatlas.com/[Clojure Atlas] - visualization of Clojure and the core library
+
+Newsletters
+
+* http://www.clojuregazette.com/[Clojure Gazette]
+* http://reborg.tumblr.com/[Clojure Weekly]
+* http://therepl.net[The REPL]
 
 Videos and presentations:
 
