--- a/content/events/2016/clojurebridge_nyc.adoc
+++ b/content/events/2016/clojurebridge_nyc.adoc
@@ -8,4 +8,6 @@ ClojureBridge
 :jbake-start: 2016-07-22
 :jbake-end: 2016-07-23
 
+http://www.clojurebridge.org/[ClojureBridge] aims to increase diversity within the Clojure community by offering free, beginner-friendly Clojure programming workshops for women.
+
 In this workshop, we'll introduce you to the fundamentals of the Clojure programming language. We'll meet up Friday night to install all of the software you need, and then spend Saturday learning and writing code.
